<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             android:layout_width="match_parent"
                                             android:layout_height="match_parent"
                                             xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white_bg">

    <TextView
        android:id="@+id/share_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="25dp"
        android:textSize="16sp"
        android:textStyle="bold"
        android:text="@string/share_title"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/share_title"
        android:gravity="center_horizontal"
        android:layout_marginTop="25dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/share1"
            android:maxWidth="60dp"
            android:gravity="center"
            android:textSize="11sp"
            android:drawableTop="@drawable/ic_qq"
            android:drawablePadding="8dp"
            android:clickable="true"
            android:background="?attr/selectableItemBackgroundBorderless"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/share2"
            android:maxWidth="70dp"
            android:gravity="center"
            android:textSize="11sp"
            android:drawableTop="@drawable/ic_computer"
            android:drawablePadding="8dp"
            android:layout_marginStart="30dp"
            android:clickable="true"
            android:background="?attr/selectableItemBackgroundBorderless"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/share3"
            android:maxWidth="60dp"
            android:gravity="center"
            android:textSize="11sp"
            android:drawableTop="@drawable/ic_bluetooth"
            android:drawablePadding="8dp"
            android:layout_marginStart="30dp"
            android:clickable="true"
            android:background="?attr/selectableItemBackgroundBorderless"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/share4"
            android:maxWidth="60dp"
            android:gravity="center"
            android:textSize="11sp"
            android:drawableTop="@drawable/ic_wechat"
            android:drawablePadding="8dp"
            android:layout_marginStart="30dp"
            android:clickable="true"
            android:background="?attr/selectableItemBackgroundBorderless"
            />

    </LinearLayout>

    <TextView
        android:id="@+id/cancel_share"
        android:layout_width="72dp"
        android:layout_height="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="32dp"
        android:gravity="center"
        android:textSize="12sp"
        android:text="@string/cancel"
        android:background="@drawable/option_cancel_bg"
        android:clickable="true"
        />


</android.support.constraint.ConstraintLayout>