<?xml version="1.0" encoding="utf-8"?>

<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             android:layout_width="match_parent"
                                             android:layout_height="match_parent"
                                             xmlns:app="http://schemas.android.com/apk/res-auto"
                                             android:background="@drawable/popup_bg">

    <TextView
        android:id="@+id/hint1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:labelFor="@id/new_folder_name"
        android:textSize="14sp"
        android:textColor="@color/colorFont"
        android:text="@string/popup1_hint1"
        />

    <EditText
        android:id="@+id/new_folder_name"
        android:layout_width="248dp"
        android:layout_height="24dp"
        app:layout_constraintTop_toBottomOf="@id/hint1"
        app:layout_constraintStart_toStartOf="@id/hint1"
        android:layout_marginTop="10dp"
        android:autofillHints="@string/popup1_hint2"
        android:inputType="text"
        android:maxLength="15"
        android:background="@drawable/et_bg"
        android:textSize="12sp"
        android:paddingHorizontal="8dp"
        android:cursorVisible="false"
        />

    <TextView
        android:id="@+id/cancel_change_name"
        android:layout_width="72dp"
        android:layout_height="24dp"
        app:layout_constraintTop_toTopOf="@id/confirm_change_name"
        app:layout_constraintEnd_toStartOf="@id/confirm_change_name"
        android:layout_marginEnd="16dp"
        android:text="@string/cancel"
        android:textSize="12sp"
        android:textStyle="bold"
        android:background="@drawable/option_cancel_bg"
        android:gravity="center"
        android:padding="2dp"
        android:textColor="@color/colorRecordPressed"
        />

    <TextView
        android:id="@+id/confirm_change_name"
        android:layout_width="72dp"
        android:layout_height="24dp"
        app:layout_constraintTop_toBottomOf="@id/new_folder_name"
        app:layout_constraintEnd_toEndOf="@id/new_folder_name"
        android:layout_marginTop="10dp"
        android:text="@string/confirm"
        android:textSize="12sp"
        android:textStyle="bold"
        android:background="@drawable/option_confirm_bg"
        android:gravity="center"
        android:padding="2dp"
        android:textColor="@color/colorTheme"
        />

</android.support.constraint.ConstraintLayout>