<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.RecordListActivity"
    android:orientation="vertical">


    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorTheme"
        app:contentInsetStart="0dp"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        android:theme="@style/ThemeOverlay.AppCompat.Light"
        android:elevation="5dp"
        android:fitsSystemWindows="true"
        >

        <ImageView
            android:id="@+id/return_record_list"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:contentDescription="@string/app_name"
            android:padding="14dp"
            android:src="@drawable/ic_return"
            android:clickable="true"
            android:background="?attr/selectableItemBackgroundBorderless"/>

        <TextView
            android:id="@+id/record_list_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textColor="@color/white_bg"
            android:text="@string/list_title"
            android:textSize="16sp"
            />
        
        <ImageView
            android:id="@+id/speaker_earpiece_switch"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_gravity="end"
            android:padding="14dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_earpiece"
            android:clickable="true"
            android:background="?attr/selectableItemBackgroundBorderless"
            />

        <TextView
            android:id="@+id/check_all"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginEnd="15dp"
            android:text="@string/check_all"
            android:textColor="@color/colorFont"
            android:textSize="15sp"
            android:visibility="gone"
            android:clickable="true"
            />
    </android.support.v7.widget.Toolbar>

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <ImageView
            android:id="@+id/empty_list_bg"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_empty_page"
            />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/level_rv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorSlideEdit"
            app:layout_constraintTop_toTopOf="parent"
            android:visibility="gone"
            />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/list_rv"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@id/level_rv"
            app:layout_constraintBottom_toBottomOf="parent"
            tools:layout_editor_absoluteX="143dp"
            app:layout_constraintVertical_bias="1.0"/>

        <TextView
            android:id="@+id/move_confirm"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:textColor="@color/white"
            android:background="@color/colorTheme"
            android:gravity="center"
            android:text="@string/move"
            android:visibility="gone"
            />


        <LinearLayout
            android:id="@+id/check_option_layout"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:orientation="horizontal"
            android:background="@color/white"
            android:gravity="center"
            android:visibility="gone"
            >

            <TextView
                android:id="@+id/check_option_edit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableTop="@drawable/ic_edit_square_enable"
                android:textSize="11sp"
                android:text="@string/edit"
                android:layout_marginEnd="25dp"
                android:clickable="true"
                />

            <TextView
                android:id="@+id/check_option_move"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableTop="@drawable/ic_edit_square_enable"
                android:textSize="11sp"
                android:text="@string/move_to"
                android:layout_marginEnd="12.5dp"
                android:clickable="true"
                />

            <TextView
                android:id="@+id/check_option_delete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableTop="@drawable/ic_move_to_enable"
                android:textSize="11sp"
                android:text="@string/delete"
                android:layout_marginStart="12.5dp"
                android:clickable="true"
                />

            <TextView
                android:id="@+id/check_option_share"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableTop="@drawable/ic_share_enable"
                android:textSize="11sp"
                android:text="@string/share"
                android:layout_marginStart="25dp"
                />

        </LinearLayout>


        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fab"
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:layout_gravity="bottom|end"
            android:layout_marginBottom="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_goneMarginEnd="16dp"
            app:layout_goneMarginBottom="16dp"
            android:backgroundTint="@color/colorTheme"
            android:elevation="10dp"
            app:borderWidth="0dp"
            android:src="@drawable/ic_add"
            />

    </android.support.constraint.ConstraintLayout>


</LinearLayout>